--- a/config/packages/fos_user.yaml
+++ b/config/packages/fos_user.yaml
@@ -5,3 +5,6 @@ fos_user:
     from_email:
         address: "admin@bigbell.net"
         sender_name: "admin@bigbell.net"
+    registration:
+        confirmation:
+            enabled: true
