--- a/config/routes/routes.yaml
+++ b/config/routes/routes.yaml
@@ -18,3 +18,15 @@ app_admin_ajax_invest:
     path: /admin/ajax/invest
     controller: App\Controller\AdminController::ajaxInvest
     methods:  [POST]
+app_payeer_index:
+    path: /payeer/
+    controller: App\Controller\PayeerController::index
+app_payeer_success:
+    path: /payeer/success
+    controller: App\Controller\PayeerController::success
+app_payeer_fail:
+    path: /payeer/fail
+    controller: App\Controller\PayeerController::fail
+app_payeer_status:
+    path: /payeer/status
+    controller: App\Controller\PayeerController::status
