--- a/composer.json
+++ b/composer.json
@@ -62,7 +62,7 @@
     "extra": {
         "symfony": {
             "allow-contrib": false,
-            "require": "4.1.*"
+            "require": "*"
         }
     }
 }
