--- a/config/routes/routes.yaml
+++ b/config/routes/routes.yaml
@@ -36,3 +36,6 @@ app_payeer_status:
 app_admin_verify:
     path: /admin/verify
     controller: App\Controller\AdminController::verify
+app_training:
+    path: /training
+    controller: App\Controller\IndexController::training
