--- a/.env.dist
+++ b/.env.dist
@@ -22,3 +22,6 @@ DATABASE_URL=mysql://db_user:db_password@127.0.0.1:3306/db_name
 # Delivery is disabled by default via "null://localhost"
 MAILER_URL=null://localhost
 ###< symfony/swiftmailer-bundle ###
+m_shop=698901819
+USD=USD
+m_key=123
