--- a/config/routes/fos_user.yaml
+++ b/config/routes/fos_user.yaml
@@ -1,2 +1,4 @@
+#fos_user:
+#    resource: "@FOSUserBundle/Resources/config/routing/all.xml"
 fos_user:
-    resource: "@FOSUserBundle/Resources/config/routing/all.xml"
+    resource: "fos_routing/all.xml"
