git add -Agit add -A ADD  NEW COLUM IN REGISTRATINO   RegistrationType git add -A!

--- a/config/packages/fos_user.yaml
+++ b/config/packages/fos_user.yaml
@@ -8,3 +8,5 @@ fos_user:
     registration:
         confirmation:
             enabled: false
+        form:
+            type: App\Form\RegistrationType
