--- a/config/packages/fos_user.yaml
+++ b/config/packages/fos_user.yaml
@@ -7,6 +7,6 @@ fos_user:
         sender_name: "globalbigbell@rambler.ru"
     registration:
         confirmation:
-            enabled: true
+            enabled: false
         form:
             type: App\Form\RegistrationType
