--- a/config/routes/routes.yaml
+++ b/config/routes/routes.yaml
@@ -67,6 +67,9 @@ app_services_individual_management:
 app_services_cars:
     path: /services/cars
     controller: App\Controller\ServicesController::cars
+app_index_individual_robot:
+    path: /individual_robot
+    controller: App\Controller\IndexController::individualRobot
 
 
 
