--- a/config/routes/routes.yaml
+++ b/config/routes/routes.yaml
@@ -73,4 +73,7 @@ app_index_individual_robot:
 app_admin_doc:
     path: /admin/doc/
     controller: App\Controller\AdminController::doc
+app_admin_admin:
+    path: /admin/admin/
+    controller: App\Controller\AdminController::adminAdmin
 
