--- a/config/routes/routes.yaml
+++ b/config/routes/routes.yaml
@@ -79,4 +79,9 @@ app_admin_statistics_id:
 app_admin_admin:
     path: /admin/admin/
     controller: App\Controller\AdminController::adminAdmin
+app_admin_root_user_id:
+    path: /admin/root/user/{id}
+    controller: App\Controller\RootController::user
+
+
 
